# distributed-speculative-inference

./: .gitignore  .pre-commit-config.yaml  README.md  async_server_poc.py  latencies.jsonl  pyproject.toml  pytest.ini  results.dvc  ruff.toml  something.ipynb  test.ipynb  test_target_server.ipynb  transformers_multiprocessing.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: python-tests.yaml
docs/: benchmark.tex  illustration.ipynb
dsi/: __main__.py  config.py  main.py  utils.py
dsi/analytic/: common.py  dsi.py  si.py
dsi/analytic/grid/: objective.py  params.py  ray_manager.py
dsi/analytic/heatmap/: enrich.py  objective.py  params.py  ray_manager.py
dsi/conf/: config.yaml
dsi/configs/: base.py  cli.py  config_cli.py  config_heatmap.py  config_latency.py  config_run.py  configs_AR.py  table.py
dsi/configs/experiment/: acceptance.py  base.py  (+2 more)
dsi/offline/: common.py
dsi/plot/: heatmap.py  iters_dist.py  mask.py
dsi/plt/: heatmap.py  iters_dist.py  utils.py
dsi/schemas/: results.py  run.py
dsi/types/: Result.py  config_cli.py  config_run.py  df_heatmap.py  exception.py  exceptions.py  experiment.py  heatmap_df.py  name.py  plot.py  result.py  results.py  run.py  simul.py
dsi/vis/: cost_dist.py  heatmap.py  iters_dist.py  utils.py
poc/: MemoryViz.js  accelerate.ipynb  device_map_llama3-1_70b_sequantial_on_2_A40.json  device_map_meta-llama_Meta-Llama-3.1-70B-Instruct_8bit_on_3A40_auto.json  device_map_meta-llama_Meta-Llama-3.1-70B-Instruct_8bit_on_3A40_custom.json  dsi.py  memory_viz.html  multi_queue.py  no_grad.py  results.ipynb  server.js  tok_ids.ipynb  transformers.ipynb  while_break.py
poc/actual/: dsi.py  event.py  main.py  manager.py  nonsi_hf.py  prompt.py  pubsub.py  setup.py  utils.py  worker.py
scripts/: test.py  test.sh
tests/: test_main.py
tests/analytic/: test_config_heatmap.py  test_dsi.py  test_result_object.py  test_sampling.py  test_si.py
tests/offline/: test_acceptance.py  test_cli.py  test_dsi.py  test_result_object.py  test_sampling.py  test_si.py
tests/online/: test_gen_config.py  test_latency.py  test_runs.py  test_simul.py
tests/plot/: test_config_plot_heatmap.py  test_plot_heatmap.py
tests/unit/: test_main.py
(+89 files in other folders)
