[tool.poetry]
name = "distributed-speculative-inference"
version = "0.1.0"
description = "Distributed Speculative Inference of LLMs"
authors = ["Nadav Timor <nadav.timor@weizmann.ac.il>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "dsi"}]

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
hydra-core = "^1.3.2"
pydantic = "^2.7.4"
ray = "^2.31.0"
dvc = {extras = ["gdrive"], version = "^3.51.2"}
torch = "^2.3.1"
transformers = "^4.41.0"
datasets = "^2.20.0"
accelerate = "^0.31.0"
sentencepiece = "^0.2.0"
tqdm = "^4.66.4"
huggingface-hub = "^0.24.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.6.1"
ipykernel = "^6.29.5"
aioconsole = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"